# cdt_challenge

anymal_elevation_mapping_cdt/: CMakeLists.txt  package.xml
anymal_elevation_mapping_cdt/config/: actuated_lidar.yaml  realsense_d435.yaml  realsense_zr300.yaml  velodyne.yaml  vlp16_rsD435.yaml
anymal_elevation_mapping_cdt/launch/: elevation_mapping_core.launch  elevation_mapping_velodyne.launch  elevation_mapping_velodyne_realsense.launch
anymal_sim_cdt/: CMakeLists.txt  package.xml
anymal_sim_cdt/config/rviz/: config.rviz
anymal_sim_cdt/include/: goal_placer.h
anymal_sim_cdt/launch/: sim.launch  sim_cdt_challenge.launch
anymal_sim_cdt/src/: goal_placer.cpp  goal_placer_node.cpp
gazebo_worlds_cdt/: CMakeLists.txt
gazebo_worlds_cdt/models/step_pallets_3/: model.config  model.sdf
gazebo_worlds_cdt/worlds/: cdt_challenge.world
lidar_navigation_cdt/: CMakeLists.txt
lidar_navigation_cdt/include/grid_map_cdt/: Challenge.hpp
lidar_navigation_cdt/include/lidar_navigation_cdt/: lidar_navigation.hpp
lidar_navigation_cdt/launch/: challenge_static_from_log.launch  lidar_navigation.launch
lidar_navigation_cdt/src/: Challenge.cpp  lidar_navigation.cpp  lidar_navigation_node.cpp
position_controller_cdt/: CMakeLists.txt
position_controller_cdt/include/position_controller_cdt/: pass.hpp
position_controller_cdt/src/position_controller_cdt/: pass.cpp
